// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game renders GameOver when gameState is game over 1`] = `
<DocumentFragment>
  <h1
    class="sc-f9cd8f8e-0 dcLxvF"
  >
    Game over.
  </h1>
  <h2
    class="sc-773df940-0 icsDSx"
  >
    undefined won.
  </h2>
  <button
    class="sc-5e2d1029-0 NWVxU"
  >
    New Game
  </button>
</DocumentFragment>
`;

exports[`Game renders WaitingForPlayers when gameState is waiting 1`] = `
<DocumentFragment>
  <h1
    class="sc-f9cd8f8e-0 dcLxvF"
  >
    Waiting for opponent...
  </h1>
</DocumentFragment>
`;

exports[`Game renders the game board, YourTurn and Reset button for players 1`] = `
<DocumentFragment>
  <h1
    class="sc-f9cd8f8e-0 dcLxvF"
  />
  <div>
    Mocked YourTurn
  </div>
  <div>
    Mocked Board
  </div>
  <button
    class="sc-5e2d1029-0 NWVxU"
  >
    Reset Game
  </button>
</DocumentFragment>
`;
